--- a/header.css
+++ b/header.css
@@ -8,16 +8,15 @@
     position: fixed;
     border-width: 3px;
     align-items: center;
-    height: 91;
-    padding-top: 26px;
-    padding-bottom: 26px;
+    height: 66px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     border-bottom: 3px solid #e01171;
     justify-content: space-between;
     top: 0px;
     margin-left:auto;
     margin-right: auto;
     width: 100%;
-    max-height: 91px;
     justify-content: space-around;
 }
 
@@ -38,6 +37,8 @@
 
 .logo{
     padding-left: 20px;
+    max-height: 28px;
+    align-self: center;
 }
 
 
@@ -49,7 +50,7 @@
 }
 
 .headerText{
-    font-size: 16px;
+    font-size: 14px;
     color: #444444;
     float: left;
     padding: 0 10px;
@@ -58,7 +59,7 @@
 .headerLoginText{
     font-family: Verdana;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 14px;
     color: #E01171;
     letter-spacing: 2px;
     text-align: right;
@@ -79,13 +80,12 @@
     border-radius: 4px;
     font-family: Verdana;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 14px;
     color: #FFFFFF;
     letter-spacing: 2px;
-    line-height: 16px;
-    padding-left: 24px;
-    line-height: 16px;
-    padding-right: 24px;
+    line-height: 14px;
+    padding-left: 20px;
+    padding-right: 20px;
     padding-top: 12px;
     padding-bottom: 12px;
     border: none;
